--- a/survey-web/src/app/app.component.html
+++ b/survey-web/src/app/app.component.html
@@ -1,6 +1,6 @@
 <nav class="nes-container is-centered title-container">
   <h1 class="title">{{title}}</h1>
-  <a routerLink="/dashboard">Dashboard</a>
+  <button class="nes-btn is-primary" routerLink="/dashboard">Dashboard</button>
 </nav>
 <router-outlet></router-outlet>
 <div>
