--- a/survey-web/src/app/Components/survey-dashboard/survey-dashboard.component.css
+++ b/survey-web/src/app/Components/survey-dashboard/survey-dashboard.component.css
@@ -1,14 +1,24 @@
 .module {
-    padding: 20px;
-    text-align: center;
-    color: #eee;
-    max-height: 120px;
-    min-width: 120px;
-    background-color: #3f525c;
-    border-radius: 2px;
+  padding: 20px;
+  text-align: center;
+  color: #eee;
+  max-height: 120px;
+  min-width: 120px;
+  background-color: #3f525c;
+  border-radius: 2px;
 }
+
 .module:hover {
-    background-color: #EEE;
-    cursor: pointer;
-    color: #607d8b;
+  background-color: #EEE;
+  cursor: pointer;
+  color: #607d8b;
+}
+
+.survey-list-container {
+  padding: 10px 15px 10px 15px;
+  margin-bottom: 10px;
+}
+
+.survey-list-container:hover {
+  background-color: #cfd8dc;
 }
