--- a/survey-web/src/app/Components/survey-detail/survey-detail.component.css
+++ b/survey-web/src/app/Components/survey-detail/survey-detail.component.css
@@ -1,7 +1,12 @@
 .is-selected {
-    color: red;
+  color: red;
+  background-color: #aaaaaa;
 }
 
 .is-option-selected {
-    color: #336699;
+  color: #336699;
+}
+
+.option-line :hover {
+  background-color: #607d8b;
 }
